2010-11-18  Darin Adler  <darin@apple.com>

        Reviewed by Kevin Decker.

        REGRESSION (WebKit2): Plug-ins and <video> start playing immediately in background tabs
        https://bugs.webkit.org/show_bug.cgi?id=49766

        Test: manual-tests/resources/video-tab.html

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::WebPage): Call setCanStartMedia(false) since the rest of the code
        starts out treating the page as "not in a window".

2010-11-18  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Adam Roben.

        Remove leftover Windows Debug_Internal configurations
        https://bugs.webkit.org/show_bug.cgi?id=49758

        * win/WebKit2.vcproj:
        * win/WebKit2WebProcess.vcproj:

2010-11-18  Anders Carlsson  <andersca@apple.com>

        Reviewed by John Sullivan.

        Page overlays should be able to handle mouse events
        https://bugs.webkit.org/show_bug.cgi?id=49756

        * Shared/API/c/WKSharedAPICast.h:
        (WebKit::toAPI):
        Add API cast function for converting an IntPoint to a WKPoint.

        * WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.cpp:
        (PageOverlayClientImpl::mouseEvent):
        Call the appropriate callbacks.

        * WebProcess/InjectedBundle/API/c/WKBundlePageOverlay.h:
        Add new callbacks.

2010-11-18  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Keep the web process alive if there are active downloads
        https://bugs.webkit.org/show_bug.cgi?id=49755

        Make sure that Download objects are destroyed when the download finishes or fails.
        Don't close the web process if there are live Download objects.
        
        * UIProcess/Downloads/DownloadProxy.cpp:
        (WebKit::DownloadProxy::didFail):
        Add stub.

        * UIProcess/Downloads/DownloadProxy.h:
        * UIProcess/Downloads/DownloadProxy.messages.in:
        Add DidFail message.
